--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
 .text-container {
     display: flex;
     flex-direction: column;
-    background-color: rgb(190, 184, 184);
+    background-color: rgb(250, 245, 245);
     flex: 1 1 35%;
     align-items: flex-start;
     justify-content: flex-end;
@@ -79,21 +79,33 @@ body {
 }
 
 .form-container {
-    background-color: rgb(241, 236, 236);
+    background-color: rgb(255, 255, 255);
     flex: 1 1 30%;
     padding: 2rem;
+    box-shadow: -12px -7px 20px 0px rgb(0 0 0 / 20%);
 }
 
 .btn-container {
     display:flex;
     flex-direction: column;
-    background-color: rgb(190, 184, 184);
+    background-color: rgb(250, 245, 245);
     flex: 1 1 35%;
     padding: 2rem;
 }
 
 .btn-container span {
     margin-top: 1rem;
+}
+
+.input-container {
+    display: flex;
+    margin-top: 1rem;
+}
+
+.label-alignment-container {
+    display: flex;
+    flex-direction: column;
+    margin-right: 3rem;
 }
 
 /* ============ */
@@ -124,6 +136,29 @@ body {
 
 .btn-container a {
     text-decoration: none;
+}
+
+.form-container span {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.form-container label {
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(39, 38, 38);
+    letter-spacing: .1rem;
+    font-size: .7rem;
+    margin-bottom: .2rem;
+}
+
+.btn-container span {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.btn-container a {
+    color: darkolivegreen;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 
 /* ============ */
