--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ body {
     text-decoration: none;
 }
 
-.form-container span {
+.form-container p {
     font-size: 1.5rem;
     font-weight: bold;
 }
@@ -180,4 +180,35 @@ body {
 .btn:hover {
     background-color: rgb(119, 145, 71);
     box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+/* ============ */
+/* Form */
+/* ============ */
+
+input {
+    transition-duration: 0.4s;
+    outline: none;
+    border: .1rem solid gray;
+    border-radius: .1rem; 
+}
+
+input:focus {
+    outline: none;
+    border: .1rem solid lightblue;
+    border-radius: .1rem;
+    box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.error:invalid {
+    border: .1rem solid red;
+}
+
+.error:valid {
+    border: .1rem solid green;
+}
+
+.error + span {
+    color: red;
+    font-size: .8rem;
 }
